# Computor

./: .gitignore  CMakeLists.txt  README.md  build.bat
abst/: AbstractBST.h  CMakeLists.txt
algorithm_utils/: CMakeLists.txt  algorithmUtils.h
app/: CMakeLists.txt  main.cpp
app/cpp/Core/: CMakeLists.txt  ComputorCreateController.cpp  ComputorCreateController.h  Logger.cpp  Logger.h  UIController.cpp  UIController.h  UIManager.cpp  UIManager.h  WindowStateLoader.cpp  WindowStateLoader.h
app/cpp/Mediators/: CMakeLists.txt  IUIMediator.cpp  IUIMediator.h  UIMediatorsContainer.cpp  UIMediatorsContainer.h
app/cpp/Models/: CMakeLists.txt  ExpressionList.cpp  ExpressionList.h  ExpressionModel.cpp  ExpressionModel.h  FunctionList.cpp  FunctionList.h  FunctionModel.cpp  FunctionModel.h  InputHistoryList.cpp  InputHistoryList.h  InputModel.cpp  InputModel.h  VariableList.cpp  VariableList.h  VariableModel.cpp  VariableModel.h
app/cpp/Utils/: CMakeLists.txt  MetadataInitializer.cpp  MetadataInitializer.h  Settings.cpp  Settings.h
app/cpp/qmlplugins/: AppQmlPlugin.cpp  AppQmlPlugin.h  AssetsProvider.cpp  AssetsProvider.h  CMakeLists.txt  ControlsColorPalette.cpp  ControlsColorPalette.h  CustomWindow.cpp  CustomWindow.h  CustomWindowImpl.cpp  CustomWindowImpl.h  GenericColorPalette.cpp  GenericColorPalette.h  MacCustomWindowImpl.cpp  MacCustomWindowImpl.h  QmlColorPalette.cpp  QmlColorPalette.h  QmlListModel.cpp  QmlListModel.h  SizeProvider.cpp  SizeProvider.h  SpecialSymbols.cpp  SpecialSymbols.h  Theme.cpp  Theme.h  WinCustomWindowImpl.cpp  WinCustomWindowImpl.h
app/qml/: CMakeLists.txt  Utils.js  main.qml  qml.qrc
app/qml/Controls/: CBusyIndicator.qml  CButton.qml  CCheckBox.qml  CComboBox.qml  CComboBoxPopup.qml  CDecorationLine.qml  CDelayButton.qml  CDial.qml  CDrawer.qml  CErrorText.qml  CGroupBox.qml  CIconButton.qml  CIconText.qml  CImage.qml  CMenu.qml  CMenuItem.qml  CPageIndicator.qml  CPopup.qml  CProgressBar.qml  CRadioButton.qml  CRadioIndicator.qml  CRangeSlider.qml  CScrollBar.qml  CSearchField.qml  CSlider.qml  CSliderHandle.qml  CSpinBox.qml  CSwitch.qml  CSwitchIndicator.qml  CTabBar.qml  CTabButton.qml  CText.qml  CTextArea.qml  CTextField.qml  CTextFieldWithHistory.qml  CTextInputCursor.qml  CToolTip.qml  CToolTipBackground.qml  CWindowHeaderButton.qml  WindowHeader.qml
app/qml/Items/: ExamplesListView.qml  ExpressionDelegate.qml  ExpressionsListView.qml  FunctionDelegate.qml  FunctionsListView.qml  HistoryListView.qml  VariableDelegate.qml  VariableListView.qml
app/qml/Widgets/: ComputorExamples.qml  CustomWindowAreaWidget.qml  WidgetComputorHistoryArea.qml  WidgetMain.qml
app/resources/: assets.qrc  fonts.qrc
app_config/: CMakeLists.txt  app_config.cpp  app_config.h  app_config_macros.h.in
cmake/: AddDirectory.cmake  Utils.cmake
ebst/: CMakeLists.txt
ebst/ebst_src/: AbstractExpressionNode.cpp  AbstractExpressionNode.h  CMakeLists.txt  EBST.cpp  EBST.h  ExpressionException.cpp  ExpressionException.h  ExpressionNode.cpp  ExpressionNode.h  ImaginaryNumberNode.cpp  ImaginaryNumberNode.h  NodeBalancing.cpp  NodeHelpers.cpp  NodeMath.cpp  NodeOutput.cpp  NodeReduce.cpp  NodeRules.cpp  NodeSimplifiers.cpp  NodeSolver.cpp  NumberNode.cpp  NumberNode.h  OperatorNode.cpp  OperatorNode.h  UnknownNode.cpp  UnknownNode.h
ebst/test/: CMakeLists.txt  main.cpp
standard_paths/: CMakeLists.txt  StandardPaths.cpp  StandardPaths.h
